force-app/main/default/objects/BusinessLinesDivisions__c/BusinessLinesDivisions__c.object-meta.xml
<CustomObject>
    <label>Business Lines and Divisions</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Lines and Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>