force-app/main/default/objects/BusinessLinesDivisions__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Business Lines and Divisions</relationshipLabel>
    <relationshipName>Business_Lines_and_Divisions</relationshipName>
    <type>Lookup</type>
</CustomField>