force-app/main/default/objects/BusinessLinesDivisions__c/fields/Business_LineLU__c.field-meta.xml
<CustomField>
    <fullName>Business_LineLU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Line</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Business Line</errorMessage>
        <filterItems>
            <field>BusinessLinesDivisions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Line</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLinesDivisions__c</referenceTo>
    <relationshipLabel>Business Lines and Divisions (Business Line)</relationshipLabel>
    <relationshipName>Relation</relationshipName>
    <type>Lookup</type>
</CustomField>