force-app/main/default/objects/BusinessLinesDivisions__c/fields/Business_LinePL__c.field-meta.xml
<CustomField>
    <fullName>Business_LinePL__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DivisionPL__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Lines</valueSetName>
    </valueSet>
</CustomField>