force-app/main/default/objects/BusinessLinesDivisions__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select a Division value in the Division field</errorMessage>
        <filterItems>
            <field>BusinessLinesDivisions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Division</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLinesDivisions__c</referenceTo>
    <relationshipLabel>Business Lines</relationshipLabel>
    <relationshipName>Business_Line</relationshipName>
    <type>Lookup</type>
</CustomField>