force-app/main/default/objects/BusinessLinesDivisions__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Division_Business_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>