force-app/main/default/objects/BusinessLinesDivisions__c/recordTypes/Business_Line.recordType-meta.xml
<RecordType>
    <fullName>Business_Line</fullName>
    <active>true</active>
    <label>Business Line</label>
</RecordType>