force-app/main/default/objects/BusinessLinesDivisions__c/recordTypes/Relation.recordType-meta.xml
<RecordType>
    <fullName>Relation</fullName>
    <active>true</active>
    <label>Relation</label>
</RecordType>