force-app/main/default/objects/BusinessLinesDivisions__c/validationRules/LeadingDivisionDuplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadingDivisionDuplicate</fullName>
    <active>false</active>
    <errorConditionFormula>Name = &apos;&apos;</errorConditionFormula>
    <errorMessage>HÖHÖHÖHÖHÖHÖHÖHÖH</errorMessage>
</ValidationRule>