force-app/main/default/objects/BusinessLinesDivisions__c/listViews/Business_Lines.listView-meta.xml
<ListView>
    <fullName>Business_Lines</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BusinessLinesDivisions__c.Business_Line</value>
    </filters>
    <label>Business Lines</label>
</ListView>