force-app/main/default/objects/BusinessLinesDivisions__c/listViews/Divisions.listView-meta.xml
<ListView>
    <fullName>Divisions</fullName>
    <columns>NAME</columns>
    <columns>Abbreviation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BusinessLinesDivisions__c.Division</value>
    </filters>
    <label>Divisions</label>
</ListView>