force-app/main/default/objects/BusinessLinesDivisions__c/listViews/Relations.listView-meta.xml
<ListView>
    <fullName>Relations</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Business_LineLU__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BusinessLinesDivisions__c.Relation</value>
    </filters>
    <label>Relations</label>
</ListView>